# CS327

./: .gitignore  CMakeLists.txt  README.md  Testing.c  hw2.txt
HW3/: hw3.c
Projects/Part1/: Makefile  Part1.c  test_input.txt  test_input2.txt  test_input3.txt
Projects/Part2/: Checkers.h  Makefile  Part1.c  Part2.c  README.txt
Projects/Part3/: Checkers.h  DEVELOPERS.txt  Makefile  Part2.c  Part3.c  README.txt
Projects/Part4/: Checkers.h  DEVELOPERS.txt  Makefile  Part4.c  README.txt  text.txt
hw/: hw1.txt
hw/hw3/: fib.c  fib.txt  hw3  hw3.c
hw/hw4/: pascal.c
hw/hw5/: count.c
hw/hw6/: mark.c
hw/hw7/: intstack.cpp
hw/hw8/: binary_op.cpp  expr.cpp  expr.h  literal.cpp  myexpr.cpp  variable.cpp
