cmake_minimum_required(VERSION 3.7.2)
project(cs327)

set(CMAKE_CXX_STANDARD 14)

add_executable(Homework3 HW/hw3/fib.c)
add_executable(Homework4 HW/hw4/pascal.c)
add_executable(Homework5 HW/hw5/count.c)
#add_executable(Project1 Projects/Part1/Part1.c)
add_executable(Project2 Projects/Part2/Part2.c)
add_executable(Testing Testing.c)